chore(spelling correction): amend some spelling and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,8 +175,8 @@ h6 {
 	height: 90%;
 	width: 90%;
 	background-color: rgba(255, 255, 255, 0.2);
-	-webkit-backdrop-filter: blur(2rem);
-	backdrop-filter: blur(2rem);
+	-webkit-backdrop-filter: blur(15px);
+	backdrop-filter: blur(15px);	
 	position: absolute;
 	margin: 0 auto;
 	padding: 2rem 2rem;
@@ -357,7 +357,7 @@ input::placeholder {
 }
 
 .table tr {
-	line-height: auto;
+	line-height: 2rem;
 }
 
 .tbody {
